refactor: mapper config annotation