@@ -8,22 +8,23 @@ import com.ttdat.userservice.domain.events.permission.PermissionUpdatedEvent;
 import org.mapstruct.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
+@Mapper(componentModel = MappingConstants.ComponentModel.SPRING,
+        injectionStrategy = InjectionStrategy.CONSTRUCTOR)
 public interface PermissionMapper extends EntityMapper<PermissionDTO, Permission> {
     Permission toEntity(PermissionCreatedEvent permissionCreatedEvent);
 
     AuthPermission toAuthPermission(Permission permission);
+
     List<AuthPermission> toAuthPermissions(List<Permission> permissions);
 
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
     void updateEntityFromEvent(@MappingTarget Permission permission, PermissionUpdatedEvent permissionUpdatedEvent);
 
     @Named("permissionIdsToEntities")
-    default List<Permission> toEntities(List<Long> permissionIds){
+    default List<Permission> toEntities(List<Long> permissionIds) {
         return permissionIds.stream()
                 .map(permissionId -> Permission.builder().permissionId(permissionId).build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
